styles.css
/* ... */
.toolbarItem img.icon {
	max-height: 100%;
	max-height: 100%;
	max-inline-size: none;
	margin: 0;
	max-block-size: 100%;
	width: auto;
	height: auto;
}

.menuItem {
	height: 5rem;
	padding: 1rem;
	width: 100%;
	box-sizing: border-box;
	margin: 0;
	font-size: revert;
	border-radius: 0.5rem;
	text-align: left;
}

.menuItem img.icon {
	max-height: 3rem;
	max-inline-size: none;
	max-block-size: 100%;
	margin: 0;
	width: auto;
	height: auto;
	vertical-align: middle;
}

[data-dark-mode=true] .toolbarItem img.icon,
[data-dark-mode=true] .menuItem img.icon,
[data-dark-mode=true] .componentBrowser img.custom {
	filter: invert(1);
}

.button,
button{
	display: inline-block;
	border-radius: 0;
	background: none;
	border: none;
	-webkit-appearance: none;
	-moz-appearance: none;
	appearance: none;
}

.button:focus-visible,
button:focus-visible {
	outline: none !important;
}

.button:active,
button:active {
	opacity: 0.6;
}

#darkMode-container button {
	block-size: 100%;
	margin: 0;
}

#darktoggle:after {
	opacity: 1;
}

#darktoggle:is(:focus-visible, :hover):after {
	opacity: 1;
	background-size: 100%;
}

#darkMode-container button:active {
	opacity: 1;
}

.toolbarItem[disabled] {
	opacity: 0.5;
}

.button span.label,
button span.label {
	display: none;
}

.componentEditorActions button {
	flex-grow: 1;
	cursor: pointer;
}

.componentEditorActions button:first-child {
	border-right: 1px solid var(--toolbar-item-border);
}

.menuDivider {
	display: none;
	border-top: 1px solid var(--toolbar-item-border);
	transition: border-top-color var(--speed) var(--easing);
	margin-left: calc(5rem + 3px);
}

.open > .menuDivider {
	display: block;
}

.menuItem > span {
	font-size: 1.5rem;
	vertical-align: middle;
	color: var(--color);
	padding-left: 0.5rem;
}

.componentBrowser {
	display: flex;
	flex-direction: row;
	justify-content: flex-start;
	flex-wrap: wrap;
	min-height: 8rem;
}
.componentBrowser img.custom,
.componentBrowser img.track {
	width: auto;
	height: auto;
	max-width: 100%;
	max-height: 100%;
	display: inline-block;
}

.componentBrowser>button {
	box-sizing: border-box;
	width: 4rem;
	height: 4rem;
	padding: 0.1rem;
	margin: 0;
}

@media (hover:hover) {
	button:hover, .button:hover {
		opacity: 0.6;
	}

	button.menuItem:hover {
		background: var(--component-hover);
		opacity: 1;
	}

	.componentBrowser>button:hover {
		background: var(--component-hover);
		opacity: 1;
	}

	#darkMode-container button:hover {
		opacity: 1;
	}
}

.componentBrowser>button:active {
	background: var(--component-active);
	opacity: 1;
}

#categoryDiv {
	width: 50%;
	margin: 0;
}

#categories {
	font-size: revert;
	padding-left: 0.5rem;
}

#categories ~ i {
	inset: 45% 0.5rem auto auto;
}

#searchText {
	font-size: revert;
	padding-left: 0.5rem;
}

#searchText:focus {
	padding-left: 0.5rem;
}

.search {
	width: 50%;
	margin: 0;
}

#searchText ~ i {
	inset: 50% 0.5rem auto auto;
}

.searchIcon {
	display: flex;
}

#searchClearButton {
	z-index: 2;
}

.searchClear {
	display: none;
}

.hasInput ~ .searchClear {
	display: flex;
}

.hasInput ~ .searchIcon {
	display: none;
}

@media (min-width: 40rem) {
	h1 {
		width: 24rem;
		min-width: 24rem;
		max-width: 24rem;
	}

	.componentBrowser>button {
		width: 8rem;
		height: 8rem;
		padding: 1rem;
	}

	#mobileLayerEditor {
		max-width: 50vw;
	}
}

@media (max-width: 50rem) {
	#configurationEditor {
		max-width: 48rem;
		---margin: calc(5rem + 20px) 0 0 0;
		width: 100%;
	}



	@media (max-height: 30rem) {
		#configurationEditor {
			---margin: 0 0 0 0;
		}
	}
}

@media (max-width: 28rem) {
	button[data-tab=appearance] {
		font-size: 1rem !important;
	}
}

